Fixed kayak on mobile. Fixed schedule text on mobile. Adjusted font-size for events on mobile

--- a/scss/animations/lake.scss
+++ b/scss/animations/lake.scss
@@ -54,6 +54,9 @@
       left: 525px;
       -webkit-transform: rotate(110deg);
               transform: rotate(110deg);
+      @media (max-width: $md-breakpoint) {
+         display: none;
+      }
    }
 
    .gill {
